ADD_DEFINITIONS(
    -std=c++11
)


SET(LIB_SOURCES
toolkit
)

SET(SKIA_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../deps/skia/out/Release/")
SET(SKIA_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../deps/skia/")
find_package(Skia REQUIRED )

INCLUDE_DIRECTORIES(${V8_INCLUDE})
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/core)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/config)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/gpu)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/gpu/gl)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/effect)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/utils)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/text)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/animator)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/device)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/pathops)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/ports)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/pipe)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE})
INCLUDE_DIRECTORIES(${GLFW_SOURCE_DIR}/include)
add_library(${PROJECT_NAME} SHARED ${LIB_SOURCES})
target_link_libraries(${PROJECT_NAME} ${SKIA_LIBS} )