ADD_DEFINITIONS(
    -std=c++11
)


SET(LIB_SOURCES
toolkit
)

INCLUDE(skia)


INCLUDE_DIRECTORIES(${V8_INCLUDE})
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/core)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/config)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/gpu)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/gpu/gl)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/effect)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/utils)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/text)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/animator)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/device)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/pathops)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/ports)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE}/pipe)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE})
INCLUDE_DIRECTORIES(${GLFW_SOURCE_DIR}/include)
add_library(${PROJECT_NAME} STATIC ${LIB_SOURCES})
message(${Skia_LIBS})
target_link_libraries(${PROJECT_NAME} ${Skia_LIBS} )
add_dependencies(${PROJECT_NAME} skia_lib)